Generating & Consuming Token using AJAX

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /Part 7 - Code/oAuthTest/oAuthTest/obj
 /Part 6 - Code/oAuthTest/packages
 /Part 7 - Code/oAuthTest/packages
+/Part 8- Code/oAuthTest/oAuthTest.v12.suo
+/Part 8- Code/oAuthTest/packages
+/Part 8- Code/oAuthTest/oAuthTest/bin
+/Part 8- Code/oAuthTest/oAuthTest/obj
