How to generate token on server side and then consume API from client side using that token

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@
 /Part 8- Code/oAuthTest/packages
 /Part 8- Code/oAuthTest/oAuthTest/bin
 /Part 8- Code/oAuthTest/oAuthTest/obj
+/Part 9 - Code/oAuthTest/packages
+/Part 9 - Code/oAuthTest/MVCTest/bin
+/Part 9 - Code/oAuthTest/oAuthTest/bin
+/Part 9 - Code/oAuthTest/MVCTest/obj
+/Part 9 - Code/oAuthTest/oAuthTest/obj
