How to access secure data on API side related to current token

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@
 /Part 9 - Code/oAuthTest/oAuthTest/bin
 /Part 9 - Code/oAuthTest/MVCTest/obj
 /Part 9 - Code/oAuthTest/oAuthTest/obj
+/Part 10 - Code/oAuthTest/packages
+/Part 10 - Code/oAuthTest/oAuthTest.v12.suo
+/Part 10 - Code/oAuthTest/oAuthTest/obj
+/Part 10 - Code/oAuthTest/oAuthTest/bin
